# smart-resume-builder-and-job-searcher

./: .gitignore  README.md  conftest.py  env.example  fonts.conf  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  test_ai_endpoints.ps1  vercel.json
api/auth/: __init__.py  backend.py  utils.py
api/serializers/: __init__.py  ai.py  auth.py  files.py  resume.py
api/tests/: test_ai.py
api/views/: ai.py  auth.py  educations.py  experiences.py  files.py  interests.py  languages.py  resumes.py  templates.py
app/: globals.css  layout.tsx
app/cover-letter/: page.tsx
app/dashboard/: page.tsx
app/forgot-password/: page.tsx
app/jobs/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
backend/: .gitignore  Procfile  conftest.py  env.example  manage.py  pytest.ini  requirements.txt
backend/api/: permissions.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
components/layout/: navbar.tsx
components/resume/: ai-summary-modal.tsx  finalizing-loader.tsx  template-selector.tsx
components/ui/: animated-particles.tsx  page-transition.tsx
config/: settings.py  supabase.py
config/ai/: __init__.py  utils.py
config/files/: __init__.py  exporter.py
docs/: AI_ANALYSIS_FIXES.md  AI_FLOW_DIAGRAM.md  SCORE_FORMULAS.md  TESTING_AI_ENDPOINTS.md
frontend/: next.config.js  package-lock.json  vercel.json
jobs/: models.py
lib/: api.ts  guest-resume.ts  providers.tsx  resume-to-text.ts  supabaseClient.ts  templates.ts  use-dirty-guard.ts  use-guest-guard.ts
resumes/: admin.py  models.py
(+129 files in other folders)
